--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
       "camelcase": "off",
       "prettier/prettier": "error",
       "import/no-unresolved": "off",
+      "import/prefer-default-export": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
