--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "type": "git",
     "url": "https://github.com/vitorbertolucci/jbt-utils.git"
   },
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
-    "dist"
+      "dist"
   ],
   "scripts": {
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
+    "build": "rm -rf dist/ && prettier --write src/ && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc --outDir dist/esm",
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
   },
   "author": "Vítor Cardoso Bertolucci <vitorbertolucci@gmail.com>",
   "license": "MIT",
@@ -20,17 +23,10 @@
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.12",
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.16.5",
-    "@babel/node": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.6",
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.8.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.2",
     "eslint-config-prettier": "^8.3.0",
