--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
     "type": "git",
     "url": "https://github.com/vitorbertolucci/jbt-utils.git"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
   "files": [
     "dist"
   ],
