--- a/package.json
+++ b/package.json
@@ -1,46 +1,31 @@
 {
   "name": "jbt-utils",
   "version": "2.7.0",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/vitorbertolucci/jbt-utils.git"
   },
   "exports": {
-    ".": {
-      "types": "./src/index.ts",
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
-    }
+    "types": "./src/index.d.ts",
+    "default": "./dist/index.js"
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist/ && prettier --write src/ && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc --outDir dist/esm",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
+    "build": "rm -rf dist/ && tsc"
   },
   "author": "Vítor Cardoso Bertolucci <vitorbertolucci@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@types/node-fetch": "^2.5.12",
     "abort-controller": "^3.0.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.7.6",
-    "@typescript-eslint/eslint-plugin": "5.8.0",
-    "@typescript-eslint/parser": "5.8.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "19.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.8",
+    "typescript": "^5.3.3"
   }
 }
