--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "declaration": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "src",
     "strict": true,
     "strictPropertyInitialization": false,
