--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
   },
   "author": "Vítor Cardoso Bertolucci <vitorbertolucci@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "@types/node-fetch": "^2.5.12",
-    "abort-controller": "^3.0.0",
-    "node-fetch": "^3.3.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.8",
