--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vitorbertolucci/jbt-utils.git"
+    "url": "git+https://github.com/vitorbertolucci/jbt-utils.git"
   },
   "exports": {
     "types": "./src/index.d.ts",
